[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/UI/Inventory/inventorygrid_items_party.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UI/InventorySlotUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/UI/InventoryUI.gd" type="Script" id=3]
[ext_resource path="res://Scenes/UI/PartySlotUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/UI/Inventory/inventory_back_arrow.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Inventory/inventory_selectcursor1.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Inventory/inventory_next_arrow.png" type="Texture" id=7]
[ext_resource path="res://Assets/Font/GOLEMNOMICON_UI/Default_UI.tres" type="DynamicFont" id=8]

[node name="InventoryUI" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BookMarginContainer" type="MarginContainer" parent="."]
margin_left = 44.0
margin_top = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BookBackground" type="TextureRect" parent="BookMarginContainer"]
margin_right = 384.0
margin_bottom = 216.0
texture = ExtResource( 1 )
stretch_mode = 5

[node name="Items" type="GridContainer" parent="BookMarginContainer/BookBackground"]
margin_left = 72.0
margin_top = 36.0
margin_right = 174.0
margin_bottom = 138.0
custom_constants/vseparation = 26
custom_constants/hseparation = 26
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventorySlotUI1" parent="BookMarginContainer/BookBackground/Items" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="InventorySlotUI2" parent="BookMarginContainer/BookBackground/Items" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 26.0
margin_right = 26.0
margin_bottom = 0.0

[node name="InventorySlotUI3" parent="BookMarginContainer/BookBackground/Items" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 52.0
margin_right = 52.0
margin_bottom = 0.0

[node name="InventorySlotUI4" parent="BookMarginContainer/BookBackground/Items" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 78.0
margin_right = 78.0
margin_bottom = 0.0

[node name="InventorySlotUI5" parent="BookMarginContainer/BookBackground/Items" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 26.0
margin_right = 0.0
margin_bottom = 26.0

[node name="InventorySlotUI6" parent="BookMarginContainer/BookBackground/Items" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 26.0
margin_top = 26.0
margin_right = 26.0
margin_bottom = 26.0

[node name="InventorySlotUI7" parent="BookMarginContainer/BookBackground/Items" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 52.0
margin_top = 26.0
margin_right = 52.0
margin_bottom = 26.0

[node name="InventorySlotUI8" parent="BookMarginContainer/BookBackground/Items" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 78.0
margin_top = 26.0
margin_right = 78.0
margin_bottom = 26.0

[node name="InventorySlotUI9" parent="BookMarginContainer/BookBackground/Items" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 0.0
margin_bottom = 52.0

[node name="InventorySlotUI10" parent="BookMarginContainer/BookBackground/Items" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 26.0
margin_top = 52.0
margin_right = 26.0
margin_bottom = 52.0

[node name="InventorySlotUI11" parent="BookMarginContainer/BookBackground/Items" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 52.0
margin_top = 52.0
margin_right = 52.0
margin_bottom = 52.0

[node name="InventorySlotUI12" parent="BookMarginContainer/BookBackground/Items" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 78.0
margin_top = 52.0
margin_right = 78.0
margin_bottom = 52.0

[node name="InventorySlotUI13" parent="BookMarginContainer/BookBackground/Items" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 78.0
margin_right = 0.0
margin_bottom = 78.0

[node name="InventorySlotUI14" parent="BookMarginContainer/BookBackground/Items" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 26.0
margin_top = 78.0
margin_right = 26.0
margin_bottom = 78.0

[node name="InventorySlotUI15" parent="BookMarginContainer/BookBackground/Items" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 52.0
margin_top = 78.0
margin_right = 52.0
margin_bottom = 78.0

[node name="InventorySlotUI16" parent="BookMarginContainer/BookBackground/Items" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 78.0
margin_top = 78.0
margin_right = 78.0
margin_bottom = 78.0

[node name="PlayerSelectionInventory" type="GridContainer" parent="BookMarginContainer/BookBackground"]
margin_left = 69.0
margin_top = 43.0
margin_right = 174.0
margin_bottom = 138.0
custom_constants/vseparation = 17
custom_constants/hseparation = 19
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selection1" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionInventory"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 7.0
margin_bottom = 9.0
texture = ExtResource( 6 )

[node name="Selection2" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionInventory"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 26.0
margin_right = 33.0
margin_bottom = 9.0
texture = ExtResource( 6 )

[node name="Selection3" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionInventory"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 52.0
margin_right = 59.0
margin_bottom = 9.0
texture = ExtResource( 6 )

[node name="Selection4" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionInventory"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 78.0
margin_right = 85.0
margin_bottom = 9.0
texture = ExtResource( 6 )

[node name="Selection5" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionInventory"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 26.0
margin_right = 7.0
margin_bottom = 35.0
texture = ExtResource( 6 )

[node name="Selection6" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionInventory"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 26.0
margin_top = 26.0
margin_right = 33.0
margin_bottom = 35.0
texture = ExtResource( 6 )

[node name="Selection7" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionInventory"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 52.0
margin_top = 26.0
margin_right = 59.0
margin_bottom = 35.0
texture = ExtResource( 6 )

[node name="Selection8" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionInventory"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 78.0
margin_top = 26.0
margin_right = 85.0
margin_bottom = 35.0
texture = ExtResource( 6 )

[node name="Selection9" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionInventory"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 52.0
margin_right = 7.0
margin_bottom = 61.0
texture = ExtResource( 6 )

[node name="Selection10" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionInventory"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 26.0
margin_top = 52.0
margin_right = 33.0
margin_bottom = 61.0
texture = ExtResource( 6 )

[node name="Selection11" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionInventory"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 52.0
margin_top = 52.0
margin_right = 59.0
margin_bottom = 61.0
texture = ExtResource( 6 )

[node name="Selection12" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionInventory"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 78.0
margin_top = 52.0
margin_right = 85.0
margin_bottom = 61.0
texture = ExtResource( 6 )

[node name="Selection13" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionInventory"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 78.0
margin_right = 7.0
margin_bottom = 87.0
texture = ExtResource( 6 )

[node name="Selection14" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionInventory"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 26.0
margin_top = 78.0
margin_right = 33.0
margin_bottom = 87.0
texture = ExtResource( 6 )

[node name="Selection15" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionInventory"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 52.0
margin_top = 78.0
margin_right = 59.0
margin_bottom = 87.0
texture = ExtResource( 6 )

[node name="Selection16" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionInventory"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 78.0
margin_top = 78.0
margin_right = 85.0
margin_bottom = 87.0
texture = ExtResource( 6 )

[node name="InventoryPageTurning" type="HBoxContainer" parent="BookMarginContainer/BookBackground"]
margin_left = 103.0
margin_top = 144.0
margin_right = 143.0
margin_bottom = 153.0
custom_constants/separation = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="BookMarginContainer/BookBackground/InventoryPageTurning"]
margin_right = 13.0
margin_bottom = 9.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
flip_h = true

[node name="NextButton" type="TextureButton" parent="BookMarginContainer/BookBackground/InventoryPageTurning"]
margin_left = 27.0
margin_right = 40.0
margin_bottom = 9.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="PartyMenu" type="VBoxContainer" parent="BookMarginContainer/BookBackground"]
margin_left = 210.0
margin_top = 36.0
margin_right = 314.0
margin_bottom = 156.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PartySlotUI1" parent="BookMarginContainer/BookBackground/PartyMenu" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 104.0
margin_bottom = 0.0

[node name="PartySlotUI2" parent="BookMarginContainer/BookBackground/PartyMenu" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 20.0
margin_right = 104.0
margin_bottom = 20.0

[node name="PartySlotUI3" parent="BookMarginContainer/BookBackground/PartyMenu" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 104.0
margin_bottom = 40.0

[node name="PartySlotUI4" parent="BookMarginContainer/BookBackground/PartyMenu" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 60.0
margin_right = 104.0
margin_bottom = 60.0

[node name="PartySlotUI5" parent="BookMarginContainer/BookBackground/PartyMenu" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 104.0
margin_bottom = 80.0

[node name="PartySlotUI6" parent="BookMarginContainer/BookBackground/PartyMenu" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 100.0
margin_right = 104.0
margin_bottom = 100.0

[node name="PlayerSelectionPartyMenu" type="VBoxContainer" parent="BookMarginContainer/BookBackground"]
margin_left = 204.0
margin_top = 40.0
margin_right = 314.0
margin_bottom = 192.0
custom_constants/separation = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selection19" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionPartyMenu"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 110.0
margin_bottom = 9.0
texture = ExtResource( 6 )

[node name="Selection20" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionPartyMenu"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 20.0
margin_right = 110.0
margin_bottom = 29.0
texture = ExtResource( 6 )

[node name="Selection21" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionPartyMenu"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 40.0
margin_right = 110.0
margin_bottom = 49.0
texture = ExtResource( 6 )

[node name="Selection22" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionPartyMenu"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 60.0
margin_right = 110.0
margin_bottom = 69.0
texture = ExtResource( 6 )

[node name="Selection23" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionPartyMenu"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 80.0
margin_right = 110.0
margin_bottom = 89.0
texture = ExtResource( 6 )

[node name="Selection24" type="TextureRect" parent="BookMarginContainer/BookBackground/PlayerSelectionPartyMenu"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 100.0
margin_right = 110.0
margin_bottom = 109.0
texture = ExtResource( 6 )

[node name="ItemDescriptor" type="Label" parent="BookMarginContainer/BookBackground"]
margin_left = 71.0
margin_top = 156.0
margin_right = 227.0
margin_bottom = 171.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 8 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BookMarginContainer/BookBackground/InventoryPageTurning/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="BookMarginContainer/BookBackground/InventoryPageTurning/NextButton" to="." method="_on_NextButton_pressed"]
